updated command